# climate-action-ghg-budget

./: .dockerignore  .env.base_template  .gitignore  .gitlab-ci.yml  .pre-commit-config-optional-linting.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.Kaniko  README.md  pyproject.toml
ghg_budget/: artifact.py  calculate.py  data.py  input.py  operator_worker.py  plugin.py
ghg_budget/components/: artifact.py  calculate.py  data.py  figures.py
ghg_budget/core/: info.py  input.py  operator_worker.py
resources/: aoi_emission_end_year.csv  aoi_pop_now.csv  cities.geojson  heidelberg.geojson  min_co2_kt_sum.csv
resources/info/: methodology.md  methodology_simple.md  purpose.md  sources.bib
resources/locales/: messages.pot  methodology.pot  methodology_simple.pot  purpose.pot
resources/locales/de/: methodology.md  methodology_simple.md  purpose.md
resources/locales/de/LC_MESSAGES/: messages.po  methodology.po  methodology_simple.po  purpose.po
resources/locales/en/: methodology.md  methodology_simple.md  purpose.md
test/: conftest.py  test_calculate.py  test_ghg_budget.py  test_operator_worker.py  test_plugin.py
test/components/: test_calculate.py  test_figures.py
test/core/: test_operator_worker.py  test_plugin.py
