[tool.poetry]
name = "ghg_budget"
version = "0.0.1"
description = "Estimate the remaining GHG budget of an area to reach at least COP21."
authors = ["Veit Ulrich <veit.ulrich@heigit.org>", "Niko Krasowski <niko.krasowski@posteo.de>", "Moritz Schott <moritz.schott@heigit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
climatoology = {git = "ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git", tag = "6.2.0"}
pydantic = "2.8.2" # see https://gitlab.heigit.org/climate-action/climatoology/-/issues/105
pydantic-settings = "^2.1.0"
geojson-pydantic = "^1.0.1"
shapely = "^2.0.2"
pyyaml = "^6.0.1"
ohsome = "^0.4.0"
matplotlib = "^3.8.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
responses = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
