[tool.poetry]
name = "ghg_budget"
version = "1.0.1"
description = "Estimate the remaining GHG budget of an area to reach at least COP21."
authors = ["Veit Ulrich <veit.ulrich@heigit.org>", "Niko Krasowski <niko.krasowski@posteo.de>", "Moritz Schott <moritz.schott@heigit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
climatoology = {git = "ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git", tag = "6.4.3"}
pydantic = "2.11.7" # see https://gitlab.heigit.org/climate-action/climatoology/-/issues/105
pydantic-settings = "^2.1.0"
geojson-pydantic = "^1.0.1"
shapely = "^2.0.2"
pyyaml = "^6.0.1"
ohsome = "^0.4.0"
matplotlib = "^3.8.2"
sympy = "^1.14.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.1.1"
responses = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[tool.coverage.run]
omit = ["test/*" , "ghg_budget/core/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
