[project]
name = "ghg_budget"
version = "1.2.0"
description = "Estimate the remaining GHG budget of an area to reach at least COP21."
authors = [
    { name = "Veit Ulrich", email = "veit.ulrich@heigit.org" },
    { name = "Niko Krasowski", email = "niko.krasowski@posteo.de" },
    { name = "Moritz Schott", email = "moritz.schott@heigit.org" },
]
readme = "README.md"

requires-python = ">=3.13.5,<3.14"
dependencies = [
    "climatoology @ git+https://gitlab.heigit.org/climate-action/climatoology.git@7.0.0",
    "pydantic (>=2.12.5,<3.0.0)",   # see https://gitlab.heigit.org/climate-action/climatoology/-/issues/105
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "pydantic-extra-types (>=2.10.5,<3.0.0)",
    "shapely (>=2.0.2,<3.0.0)",
    "matplotlib (>=3.8.2,<4.0.0)",
    "ohsome (>=0.4.0,<1.0.0)",
    "pyyaml (>=6.0.1,<7.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
]

[project.urls]
repository = "https://gitlab.heigit.org/climate-action/plugins/ghg-budget"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
responses = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select=[
    # defaults
    "F",
    "E4", "E7", "E9",

    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions

    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",

    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]

[tool.coverage.run]
omit = ["test/*" , "ghg_budget/core/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
